// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Weather to Temp tests Checking weather of Alaska - Should respond with status code 200 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1M2RkUUJ9wXRsW3jN1MCHS",
    "name": "4 Impromptus, Op.90, D.899: No.4 in A Flat Major: Allegretto",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0dzl6bBvsIAfHLlTbBObTW",
    "name": "An der schönen blauen Donau, Op.314",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/3af6PvJHP8XlFMWeuN7bF8",
    "name": "Andante festivo for Strings and Timpani, JS 34b",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/6vS8JCT9WqTFeAuu8smjRF",
    "name": "Appalachian Spring: VII. Doppio movimento",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/4GnVpbnWjHFrpXjAcPHvqM",
    "name": "Ave Maria, D. 839",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/3zLTPuucd3e6TxZnu2dlVS",
    "name": "Bagatelle No. 25 in A Minor, WoO 59 \\"Für Elise\\"",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1CSaCKPIp2yCIDL3t7Fyau",
    "name": "Barber: Adagio for Strings, Op. 11",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/3pzBD8BVdrv7VJ7glRYshl",
    "name": "Carmen, Act I: No.5 Habanera : L'amour est un oiseau rebelle (Carmen/Cigarières/Jeunes gens/Dragons)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0neipEnwEzyd66aUqUsg5P",
    "name": "Cello Concerto In B Minor, Op.104, B. 191: 1. Allegro",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/7dchPojQcmY6eMBFJAo64i",
    "name": "Cello Concerto No.1, Op.107: 1. Allegretto",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/17i5jLpzndlQhbS4SrTd0B",
    "name": "Cello Suite No. 1 in G Major, BWV 1007: I. Prélude",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/2MSgFefjK0T7Iwjvr3OKqV",
    "name": "Chopin: Nocturne No. 20 in C-Sharp Minor, Op. Posth.",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/4O2N861eOnF9q8EtpH8IJu",
    "name": "Comptine d'un autre été, l'après-midi",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0pCHzhuRt6kOU3FUEG3HnC",
    "name": "Danse Macabre, Op.40, R.171",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/2dEbRirkEtImY7HdYxrgRS",
    "name": "Delius: 2 Pieces for Small Orchestra: No. 1, On Hearing the First Cuckoo in Spring",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/3NbAsIxDL0fVgNuCLD152P",
    "name": "Dolly, Op. 56: 1. Berceuse",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5pjDwtMPly0cNMbuGXhUOI",
    "name": "Elgar: Cello Concerto in E Minor, Op. 85: I. Adagio - Moderato",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/4QfYHdV8hMoyS9qKUct98q",
    "name": "Elégie in C Minor, Op. 24 (Arr. Parkin)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5fdp9rXfEixCGLM1Og4EN1",
    "name": "Gnossienne No. 1",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1aTpzY2ggWHhPi8p2f56u1",
    "name": "Goldberg Variations, BWV 988: Aria da capo - 1981 Version",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1ENZ1YHuOp5MMFJlWBQ6V7",
    "name": "Goldberg Variations, BWV 988: Variatio 7 a 1 ovvero 2 Clav. Al tempo di Giga",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1upQiytDIEZfl9ItruoXuC",
    "name": "Handel / Orch. Hale: Keyboard Suite No. 4 in D Minor, HWV 437: III. Sarabande",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/246ntJR3A2s7B5E40FTCLf",
    "name": "Hummel: Trumpet Concerto In E Flat - Iii Rondo",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5d6FOGCa0EDqCJSpccEh8s",
    "name": "Hungarian Dance No.5 in G Minor, WoO 1, No.5",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/4dGkPPLnIdVgogqpyaAjbc",
    "name": "Il barbiere di Siviglia: Overture (Sinfonia)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/2nVt0n0aSj3AwZjakMvDHX",
    "name": "Khachaturian: Spartacus Suite No. 2: I. Adagio of Spartacus and Phrygia",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/2u9VGZmVz7Rm01SfDgzcfA",
    "name": "Liebestraum No. 3 in A-Flat Major, S. 541 / 3",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0cqcRqZgkNHanWQ8slYA0v",
    "name": "Mahler: Symphony No. 5 in C-Sharp Minor: IV. Adagietto. Sehr langsam",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/6Uk28Hs2MulezLxMrd1rBD",
    "name": "Meditation: Méditation from Thaïs",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1dFVnX4mJTnWubAPE8S3OR",
    "name": "Mephisto Waltz No. 1, S. 514",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5bVlEvO3SadcOyh6rnWW4P",
    "name": "Merry Christmas Mr. Lawrence (Arr. Metcalfe)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/63cA2QfqtWZa0GGPZnYc0K",
    "name": "Mozart: Clarinet Concerto in A Major, K. 622: II. Adagio",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/6zcP5A5Xv6bvCUpwXrswKa",
    "name": "Nascence",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/2TB6PQkgnw9rrFRK4VOOrC",
    "name": "Nocturne No. 2 in E-Flat Major, Op. 9 No. 2",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0S0YKiEdR9cT9pYgEaTevF",
    "name": "O Magnum Mysterium: O magnum mysterium",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5DFUsGW4Cmltv8Spd0u1aV",
    "name": "On The Nature Of Daylight",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/6GDuB7BvASYD9JePYvOEX1",
    "name": "Orfeo Ed Euridice: Dance Of The Blessed Spirits (Act 2)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5Pl2CXDkaP6WEnJ0bpKGOm",
    "name": "Organ Sonata No. 4, BWV 528: II. Andante [Adagio] (Transcr. by August Stradal)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5x3TUfYzgZIdt0Kaop64ss",
    "name": "Pachelbel: Canon and Gigue in D Major for 3 Violins and Continuo, P. 37: I. Canon (Orchestral Version)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/6cC6h5E351deEGFd7Kh9uy",
    "name": "Paganini: 24 Caprices, Op. 1: No. 24 in A Minor",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/46tPGzCXCI2oKsemztDA9u",
    "name": "Parce Mihi Domine",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/3VQ7hwiEfaHDl3AySgyaiR",
    "name": "Peer Gynt, Op. 23: Act II, 7, In the Hall of the Mountain King",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0oIQl9tFpCiKBRavEIIGzo",
    "name": "Pelléas et Mélisande, Op. 80: 4. Sicilienne",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1Xy6MHSaX3IUGGqst6RzYM",
    "name": "Piano Concerto No. 1 in B-Flat Minor, Op. 23: I. Allegro non troppo e molto maestoso – Allegro con spirito",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/4rrrn8OLrttq7r9RgNXalU",
    "name": "Piano Concerto No. 2 in C Minor, Op. 18: 2. Adagio sostenuto",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/76wXMaJVSr0nSsKsSdwAiu",
    "name": "Piano Concerto No. 5 in E-Flat Major, Op. 73 \\"Emperor\\": II. Adagio un poco mosso - Live at Konzerthaus Berlin / 2018",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/3QqPgzOcv9titKufFR0gsQ",
    "name": "Piano Concerto No.3 in C, Op.26: 1. Andante - Allegro",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0QTaXZRWdzfPdssiQThdCL",
    "name": "Piano Concerto in A Minor, Op. 16: I. Allegro molto moderato",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/2Z4aQJh0kesRMookvtfR4y",
    "name": "Piano Concerto in A Minor, Op.16: I. Allegro molto moderato",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/6kg7bfwsTKzRqnBGGv4VqR",
    "name": "Piano Concerto in C-Sharp Minor, FP 146: I. Allegretto commodo - Live",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
]
`;

exports[`Weather to Temp tests Checking weather of Alaska By Coordinates - Should respond with status code 200 1`] = `
Array [
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1M2RkUUJ9wXRsW3jN1MCHS",
    "name": "4 Impromptus, Op.90, D.899: No.4 in A Flat Major: Allegretto",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0dzl6bBvsIAfHLlTbBObTW",
    "name": "An der schönen blauen Donau, Op.314",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/3af6PvJHP8XlFMWeuN7bF8",
    "name": "Andante festivo for Strings and Timpani, JS 34b",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/6vS8JCT9WqTFeAuu8smjRF",
    "name": "Appalachian Spring: VII. Doppio movimento",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/4GnVpbnWjHFrpXjAcPHvqM",
    "name": "Ave Maria, D. 839",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/3zLTPuucd3e6TxZnu2dlVS",
    "name": "Bagatelle No. 25 in A Minor, WoO 59 \\"Für Elise\\"",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1CSaCKPIp2yCIDL3t7Fyau",
    "name": "Barber: Adagio for Strings, Op. 11",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/3pzBD8BVdrv7VJ7glRYshl",
    "name": "Carmen, Act I: No.5 Habanera : L'amour est un oiseau rebelle (Carmen/Cigarières/Jeunes gens/Dragons)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0neipEnwEzyd66aUqUsg5P",
    "name": "Cello Concerto In B Minor, Op.104, B. 191: 1. Allegro",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/7dchPojQcmY6eMBFJAo64i",
    "name": "Cello Concerto No.1, Op.107: 1. Allegretto",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/17i5jLpzndlQhbS4SrTd0B",
    "name": "Cello Suite No. 1 in G Major, BWV 1007: I. Prélude",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/2MSgFefjK0T7Iwjvr3OKqV",
    "name": "Chopin: Nocturne No. 20 in C-Sharp Minor, Op. Posth.",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/4O2N861eOnF9q8EtpH8IJu",
    "name": "Comptine d'un autre été, l'après-midi",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0pCHzhuRt6kOU3FUEG3HnC",
    "name": "Danse Macabre, Op.40, R.171",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/2dEbRirkEtImY7HdYxrgRS",
    "name": "Delius: 2 Pieces for Small Orchestra: No. 1, On Hearing the First Cuckoo in Spring",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/3NbAsIxDL0fVgNuCLD152P",
    "name": "Dolly, Op. 56: 1. Berceuse",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5pjDwtMPly0cNMbuGXhUOI",
    "name": "Elgar: Cello Concerto in E Minor, Op. 85: I. Adagio - Moderato",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/4QfYHdV8hMoyS9qKUct98q",
    "name": "Elégie in C Minor, Op. 24 (Arr. Parkin)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5fdp9rXfEixCGLM1Og4EN1",
    "name": "Gnossienne No. 1",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1aTpzY2ggWHhPi8p2f56u1",
    "name": "Goldberg Variations, BWV 988: Aria da capo - 1981 Version",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1ENZ1YHuOp5MMFJlWBQ6V7",
    "name": "Goldberg Variations, BWV 988: Variatio 7 a 1 ovvero 2 Clav. Al tempo di Giga",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1upQiytDIEZfl9ItruoXuC",
    "name": "Handel / Orch. Hale: Keyboard Suite No. 4 in D Minor, HWV 437: III. Sarabande",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/246ntJR3A2s7B5E40FTCLf",
    "name": "Hummel: Trumpet Concerto In E Flat - Iii Rondo",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5d6FOGCa0EDqCJSpccEh8s",
    "name": "Hungarian Dance No.5 in G Minor, WoO 1, No.5",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/4dGkPPLnIdVgogqpyaAjbc",
    "name": "Il barbiere di Siviglia: Overture (Sinfonia)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/2nVt0n0aSj3AwZjakMvDHX",
    "name": "Khachaturian: Spartacus Suite No. 2: I. Adagio of Spartacus and Phrygia",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/2u9VGZmVz7Rm01SfDgzcfA",
    "name": "Liebestraum No. 3 in A-Flat Major, S. 541 / 3",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0cqcRqZgkNHanWQ8slYA0v",
    "name": "Mahler: Symphony No. 5 in C-Sharp Minor: IV. Adagietto. Sehr langsam",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/6Uk28Hs2MulezLxMrd1rBD",
    "name": "Meditation: Méditation from Thaïs",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1dFVnX4mJTnWubAPE8S3OR",
    "name": "Mephisto Waltz No. 1, S. 514",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5bVlEvO3SadcOyh6rnWW4P",
    "name": "Merry Christmas Mr. Lawrence (Arr. Metcalfe)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/63cA2QfqtWZa0GGPZnYc0K",
    "name": "Mozart: Clarinet Concerto in A Major, K. 622: II. Adagio",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/6zcP5A5Xv6bvCUpwXrswKa",
    "name": "Nascence",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/2TB6PQkgnw9rrFRK4VOOrC",
    "name": "Nocturne No. 2 in E-Flat Major, Op. 9 No. 2",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0S0YKiEdR9cT9pYgEaTevF",
    "name": "O Magnum Mysterium: O magnum mysterium",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5DFUsGW4Cmltv8Spd0u1aV",
    "name": "On The Nature Of Daylight",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/6GDuB7BvASYD9JePYvOEX1",
    "name": "Orfeo Ed Euridice: Dance Of The Blessed Spirits (Act 2)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5Pl2CXDkaP6WEnJ0bpKGOm",
    "name": "Organ Sonata No. 4, BWV 528: II. Andante [Adagio] (Transcr. by August Stradal)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/5x3TUfYzgZIdt0Kaop64ss",
    "name": "Pachelbel: Canon and Gigue in D Major for 3 Violins and Continuo, P. 37: I. Canon (Orchestral Version)",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/6cC6h5E351deEGFd7Kh9uy",
    "name": "Paganini: 24 Caprices, Op. 1: No. 24 in A Minor",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/46tPGzCXCI2oKsemztDA9u",
    "name": "Parce Mihi Domine",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/3VQ7hwiEfaHDl3AySgyaiR",
    "name": "Peer Gynt, Op. 23: Act II, 7, In the Hall of the Mountain King",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0oIQl9tFpCiKBRavEIIGzo",
    "name": "Pelléas et Mélisande, Op. 80: 4. Sicilienne",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/1Xy6MHSaX3IUGGqst6RzYM",
    "name": "Piano Concerto No. 1 in B-Flat Minor, Op. 23: I. Allegro non troppo e molto maestoso – Allegro con spirito",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/4rrrn8OLrttq7r9RgNXalU",
    "name": "Piano Concerto No. 2 in C Minor, Op. 18: 2. Adagio sostenuto",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/76wXMaJVSr0nSsKsSdwAiu",
    "name": "Piano Concerto No. 5 in E-Flat Major, Op. 73 \\"Emperor\\": II. Adagio un poco mosso - Live at Konzerthaus Berlin / 2018",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/3QqPgzOcv9titKufFR0gsQ",
    "name": "Piano Concerto No.3 in C, Op.26: 1. Andante - Allegro",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/0QTaXZRWdzfPdssiQThdCL",
    "name": "Piano Concerto in A Minor, Op. 16: I. Allegro molto moderato",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/2Z4aQJh0kesRMookvtfR4y",
    "name": "Piano Concerto in A Minor, Op.16: I. Allegro molto moderato",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
  Object {
    "__v": 0,
    "_id": "000000000000000000000000",
    "createdAt": "1984-01-24T16:00:00.000Z",
    "genre": "classics",
    "href": "https://api.spotify.com/v1/tracks/6kg7bfwsTKzRqnBGGv4VqR",
    "name": "Piano Concerto in C-Sharp Minor, FP 146: I. Allegretto commodo - Live",
    "updatedAt": "1984-01-24T16:00:00.000Z",
  },
]
`;

exports[`Weather to Temp tests Checking weather without body - Should respond with status code 422 1`] = `
Object {
  "message": "Value must contain at least one of coordinates, city",
}
`;

exports[`Weather to Temp tests Seeding data - Should respond with status code 200 1`] = `
Object {
  "message": "ok",
}
`;
